unpackaged/main/default/objects/Order_Ticket__c/Order_Ticket__c.object-meta.xml
<CustomObject>
    <label>Order Ticket</label>
    <nameField>
        <displayFormat>OT-{00000}</displayFormat>
        <label>Order Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>