unpackaged/main/default/objects/Order_Ticket__c/fields/Bond_Ladder__c.field-meta.xml
<CustomField>
    <fullName>Bond_Ladder__c</fullName>
    <formula>Strategy__r.Bond_Ladder__c</formula>
    <label>Bond Ladder?</label>
    <type>Checkbox</type>
</CustomField>