unpackaged/main/default/objects/Order_Ticket__c/fields/Branch_ID_AML__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID_AML__c</fullName>
    <label>Branch ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>