unpackaged/main/default/objects/Order_Ticket__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Order Tickets</relationshipLabel>
    <relationshipName>Order_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>