unpackaged/main/default/objects/Order_Ticket__c/fields/Commission_AML__c.field-meta.xml
<CustomField>
    <fullName>Commission_AML__c</fullName>
    <label>Commission</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>