unpackaged/main/default/objects/Order_Ticket__c/fields/Date_of_First_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Withdrawal__c</fullName>
    <label>Date of First Withdrawal</label>
    <type>Date</type>
</CustomField>