unpackaged/main/default/objects/Order_Ticket__c/fields/Email_Confirm_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirm_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Confirm Sent</label>
    <type>Checkbox</type>
</CustomField>