unpackaged/main/default/objects/Order_Ticket__c/fields/Expected_Account_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Account_Value__c</fullName>
    <label>Expected Account Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>