unpackaged/main/default/objects/Order_Ticket__c/fields/Expected_Value_Initial_Funding_Reason__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value_Initial_Funding_Reason__c</fullName>
    <inlineHelpText>Only applicable if expected account value is different than the initial funding amount.</inlineHelpText>
    <label>Expected Value Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>