unpackaged/main/default/objects/Order_Ticket__c/fields/External_Account_AML__c.field-meta.xml
<CustomField>
    <fullName>External_Account_AML__c</fullName>
    <formula>Financial_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Account</label>
    <type>Text</type>
</CustomField>