unpackaged/main/default/objects/Order_Ticket__c/fields/Financial_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Number__c</fullName>
    <formula>Financial_Account__r.FinServ__FinancialAccountNumber__c</formula>
    <label>Financial Account Number</label>
    <type>Text</type>
</CustomField>