unpackaged/main/default/objects/Order_Ticket__c/fields/Financial_Advisor_Team__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Advisor Team</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipLabel>Order Tickets</relationshipLabel>
    <relationshipName>Order_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>