unpackaged/main/default/objects/Order_Ticket__c/fields/Financial_Advisor_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team_Name__c</fullName>
    <formula>Financial_Account__r.Financial_Advisor_Team__r.Name</formula>
    <label>Financial Advisor Team Name</label>
    <type>Text</type>
</CustomField>