unpackaged/main/default/objects/Order_Ticket__c/fields/Flow_Interview_ID__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_ID__c</fullName>
    <label>Flow Interview ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>