unpackaged/main/default/objects/Order_Ticket__c/fields/Household_Name__c.field-meta.xml
<CustomField>
    <fullName>Household_Name__c</fullName>
    <formula>Financial_Account__r.FinServ__Household__r.Name</formula>
    <label>Household Name</label>
    <type>Text</type>
</CustomField>