unpackaged/main/default/objects/Order_Ticket__c/fields/Internal_Trade_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Trade_Notes__c</fullName>
    <label>Internal Trade Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>