unpackaged/main/default/objects/Order_Ticket__c/fields/Interval_Fund__c.field-meta.xml
<CustomField>
    <fullName>Interval_Fund__c</fullName>
    <formula>Strategy__r.Interval_Fund__c</formula>
    <label>Interval Fund?</label>
    <type>Checkbox</type>
</CustomField>