unpackaged/main/default/objects/Order_Ticket__c/fields/Leave_in_Kind__c.field-meta.xml
<CustomField>
    <fullName>Leave_in_Kind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leave in Kind</label>
    <type>Checkbox</type>
</CustomField>