unpackaged/main/default/objects/Order_Ticket__c/fields/Method_of_Cash_Raise__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Cash_Raise__c</fullName>
    <label>Method of Cash Raise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pro-rata</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>