unpackaged/main/default/objects/Order_Ticket__c/fields/Method_to_Allocate__c.field-meta.xml
<CustomField>
    <fullName>Method_to_Allocate__c</fullName>
    <label>Method to Allocate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocate Pro-rata to Standard Trade Instructions</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>