unpackaged/main/default/objects/Order_Ticket__c/fields/of_Orders__c.field-meta.xml
<CustomField>
    <fullName>of_Orders__c</fullName>
    <label># of Orders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>