unpackaged/main/default/objects/Order_Ticket__c/fields/Order_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Completed_Date__c</fullName>
    <label>Order Completed Date</label>
    <type>Date</type>
</CustomField>