unpackaged/main/default/objects/Order_Ticket__c/fields/Principal_AML__c.field-meta.xml
<CustomField>
    <fullName>Principal_AML__c</fullName>
    <label>Principal Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>