unpackaged/main/default/objects/Order_Ticket__c/fields/Rep_ID_AML__c.field-meta.xml
<CustomField>
    <fullName>Rep_ID_AML__c</fullName>
    <formula>TEXT(Financial_Account__r.Financial_Advisor_Team__r.Orion_ID__c)</formula>
    <label>Rep ID</label>
    <type>Text</type>
</CustomField>