unpackaged/main/default/objects/Order_Ticket__c/fields/Settle_Date_AML__c.field-meta.xml
<CustomField>
    <fullName>Settle_Date_AML__c</fullName>
    <label>Settle Date</label>
    <type>Date</type>
</CustomField>