unpackaged/main/default/objects/Order_Ticket__c/fields/Share_Price_AML__c.field-meta.xml
<CustomField>
    <fullName>Share_Price_AML__c</fullName>
    <label>Share Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>