unpackaged/main/default/objects/Order_Ticket__c/fields/Shares_AML__c.field-meta.xml
<CustomField>
    <fullName>Shares_AML__c</fullName>
    <label>Share Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>