unpackaged/main/default/objects/Order_Ticket__c/fields/Short_Term_Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Cash_Management__c</fullName>
    <formula>Strategy__r.Short_Term_Cash_Management__c</formula>
    <label>Short Term Cash Management?</label>
    <type>Checkbox</type>
</CustomField>