unpackaged/main/default/objects/Order_Ticket__c/fields/Sleeve_Number__c.field-meta.xml
<CustomField>
    <fullName>Sleeve_Number__c</fullName>
    <label>Sleeve Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>