unpackaged/main/default/objects/Order_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Ops Review</fullName>
            </value>
            <value>
                <fullName>Ops Hold</fullName>
            </value>
            <value>
                <fullName>Ops Complete</fullName>
            </value>
            <value>
                <fullName>Pending Funding</fullName>
            </value>
            <value>
                <fullName>Funded Pending Trading</fullName>
            </value>
            <value>
                <fullName>No E-Delivery</fullName>
            </value>
            <value>
                <fullName>Not Enabled</fullName>
            </value>
            <value>
                <fullName>AM Flagged</fullName>
            </value>
            <value>
                <fullName>OCI Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed-No Action</fullName>
            </value>
            <value>
                <fullName>Closed - Error</fullName>
            </value>
            <value>
                <fullName>Waiting on Trade Instructions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>