unpackaged/main/default/objects/Order_Ticket__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategy</label>
    <referenceTo>Strategy__c</referenceTo>
    <relationshipLabel>Order Tickets</relationshipLabel>
    <relationshipName>Order_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>