unpackaged/main/default/objects/Order_Ticket__c/fields/Strategy_Code__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Code__c</fullName>
    <label>Strategy Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>