unpackaged/main/default/objects/Order_Ticket__c/fields/Strategy_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Code_Formula__c</fullName>
    <formula>Strategy__r.Strategy_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategy Code (formula)</label>
    <type>Text</type>
</CustomField>