unpackaged/main/default/objects/Order_Ticket__c/fields/Structured_Note__c.field-meta.xml
<CustomField>
    <fullName>Structured_Note__c</fullName>
    <formula>Strategy__r.Structured_Note__c</formula>
    <label>Structured Note?</label>
    <type>Checkbox</type>
</CustomField>