unpackaged/main/default/objects/Order_Ticket__c/fields/Trade_Date_AML__c.field-meta.xml
<CustomField>
    <fullName>Trade_Date_AML__c</fullName>
    <formula>IF(
    ISBLANK(CreatedDate),
    NULL,
    LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &#39;0&#39;) + &#39;/&#39; +
    LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &#39;0&#39;) + &#39;/&#39; +
    TEXT(YEAR(DATEVALUE(CreatedDate)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Date</label>
    <type>Text</type>
</CustomField>