unpackaged/main/default/objects/Order_Ticket__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New DMS Instructions</fullName>
            </value>
            <value>
                <fullName>Update DMS Instructions</fullName>
            </value>
            <value>
                <fullName>Raise Cash</fullName>
            </value>
            <value>
                <fullName>Instructions for Future Deposit</fullName>
            </value>
            <value>
                <fullName>Add Systematic Withdrawal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Remove Systematic Withdrawal</fullName>
            </value>
            <value>
                <fullName>Add/Remove Systematic Withdrawals</fullName>
                <isActive>false</isActive>
                <label>Add/Remove Systematic Withdrawals</label>
            </value>
            <value>
                <fullName>Instructions for Future Deposits</fullName>
                <isActive>false</isActive>
                <label>Instructions for Future Deposits</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>