unpackaged/main/default/objects/Order_Ticket__c/fields/Wizard_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Order Tickets</relationshipLabel>
    <relationshipName>Order_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>