unpackaged/main/default/objects/Order_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Case__c</columns>
    <columns>Household_Name__c</columns>
    <columns>Financial_Account_Number__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>