unpackaged/main/default/objects/Order_Ticket__c/listViews/Asset_Management_Order_Ticket.listView-meta.xml
<ListView>
    <fullName>Asset_Management_Order_Ticket</fullName>
    <filterScope>Queue</filterScope>
    <label>Asset Management</label>
    <queue>Asset_Management</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>