unpackaged/main/default/objects/Order_Ticket__c/listViews/Funded_Pending_Trading.listView-meta.xml
<ListView>
    <fullName>Funded_Pending_Trading</fullName>
    <columns>Strategy__c</columns>
    <columns>Initial_Funding_Percentage__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>Household_Name__c</columns>
    <columns>Financial_Advisor_Team_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Funded Pending Trading</value>
    </filters>
    <label>Funded Pending Trading</label>
    <sharedTo>
        <group>Asset_Management</group>
    </sharedTo>
</ListView>